# triton-pybind

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.py
src/: triton_pybind.cpp
